--- a/src/app/kilograms/kilograms.component.html
+++ b/src/app/kilograms/kilograms.component.html
@@ -20,7 +20,7 @@
     <md-card-content>
       <md-grid-list cols="4" rowHeight="350px">
         <md-grid-tile *ngFor="let idUsed of idsUsed"> 
-            <img src="http://www.roguefitness.com/media/catalog/product/cache/1/image/1500x1500/472321edac810f9b2465a359d8cdc0b5/i/p/ipf-calibrate-plates-web{{idUsed}}.jpg" layout-fill>
+            <img src="../../assets/images/kgs/plate{{idUsed}}.png" layout-fill>
         </md-grid-tile>
       </md-grid-list>
     </md-card-content>
