--- a/src/app/pounds/pounds.component.html
+++ b/src/app/pounds/pounds.component.html
@@ -19,10 +19,8 @@
     <md-card-title>Plates Required On Each Side</md-card-title>
     <md-card-content>
       <md-grid-list cols="4" rowHeight="350px">
-        <md-grid-tile *ngFor="let idUsed of idsUsed">
-          
-              <img src="http://www.roguefitness.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/r/o/rogue-calibrated-lb-steel-plates-web{{idUsed}}.jpg" layout-fill>
-          
+        <md-grid-tile *ngFor="let idUsed of idsUsed">          
+              <img src="../../assets/images/lbs/plate{{idUsed}}.png" layout-fill>
         </md-grid-tile>
       </md-grid-list>
     </md-card-content>
